# servelink-app

./: .dockerignore  .env.dev.example  .env.devops.example  .env.example  .env.prod.example  .flaskenv  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PRICING_SUMMARY.md  README.md  TODO.txt  access.example.json  config.py  docker-compose.override.dev.yml  docker-compose.override.prod.yml  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  package.json  pyrightconfig.json  requirements.txt  tailwind.config.js  test_preset_logo.py  test_pricing_integration.py  test_start_command_validation.py  worker.py
app/: README.md  __init__.py  cli.py  config.py  db.py  dependencies.py  main.py  models.py  package.json  pyproject.toml  worker.py
app/api/: routes.py
app/assets/: styles.css
app/auth/: forms.py  routes.py  utils.py
app/data/: README.md  project_presets.json
app/forms/: auth.py  project.py  team.py  user.py
app/helpers/: colors.py  environments.py  github.py  htmx.py
app/main/: decorators.py  forms.py  routes.py
app/middleware/: traffic_recorder.py
app/migrations/: env.py
app/routers/: analytics.py  analytics_pages.py  api.py  auth.py  bug_report.py  event.py  github.py  google.py  knowledge_base.py  knowledge_base_pages.py  payment.py  pricing.py  project.py  resources.py  support.py  support_pages.py  team.py  user.py
app/services/: additional_resources.py  analytics.py  deployment.py  domain.py  github.py  github_installation.py  knowledge_base.py  loki.py  nginx.py  notification.py  onesignal.py  payment.py  (+5 more)
web/: config.py  package.json  pyproject.toml  requirements.txt  worker.py
(+562 files in other folders)
